fix used by list overflowing, update used by list

--- a/src/app/tinyglobby/styles.css
+++ b/src/app/tinyglobby/styles.css
@@ -83,7 +83,6 @@ ul {
   align-items: center;
   overflow: hidden;
   white-space: pre-wrap;
-  width: 400px;
   row-gap: 6px;
 }
 
@@ -93,25 +92,25 @@ ul {
   position: relative;
   overflow: hidden;
   height: 1em;
+  mask-image: linear-gradient(90deg, #000 60%, transparent);
   flex: 1;
-}
+  & > * {
+    display: flex;
+    flex-direction: column;
+    width: max-content;
 
-#used-by-entries > * {
-  display: flex;
-  flex-direction: column;
-  width: fit-content;
+    /*
+      rare css-only marquee with no duplication
+      i have no idea how this works
+      https://codepen.io/bitgrip-thomas/pen/mdZbgXN
+    */
+    --marquee-item-position: calc(var(--marquee-item-index) + 1);
+    --duration: 40s;
+    --duration-per-item: calc(var(--duration) / var(--marquee-count));
+    --delay: calc(-1 * var(--duration-per-item) * (var(--marquee-count) - var(--marquee-item-position)));
 
-  /*
-    rare css-only marquee with no duplication
-    i have no idea how this works
-    https://codepen.io/bitgrip-thomas/pen/mdZbgXN
-  */
-  --marquee-item-position: calc(var(--marquee-item-index) + 1);
-  --duration: 40s;
-  --duration-per-item: calc(var(--duration) / var(--marquee-count));
-  --delay: calc(-1 * var(--duration-per-item) * (var(--marquee-count) - var(--marquee-item-position)));
-
-  animation: scroll-up var(--duration) var(--delay) linear infinite;
+    animation: scroll-up var(--duration) var(--delay) linear infinite;
+  }
 }
 
 @keyframes scroll-up {
@@ -127,9 +126,8 @@ ul {
   #used-by-entries {
     overflow-y: auto;
     height: 40px;
-  }
-
-  #used-by-entries > div {
-    animation: none !important;
+    & > * {
+      animation: none !important;
+    }
   }
 }
